--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,14 @@
         "usart.h": "c",
         "spi.h": "c",
         "stm32f1xx_hal.h": "c",
-        "lcd.h": "c"
+        "lcd.h": "c",
+        "main.h": "c",
+        "ads1292r.h": "c",
+        "armdsp.h": "c",
+        "arm_math.h": "c",
+        "xmemory": "cpp",
+        "xutility": "cpp",
+        "xstring": "cpp",
+        "string": "cpp"
     }
 }
